--- a/css/bigscreen.css
+++ b/css/bigscreen.css
@@ -20,3 +20,12 @@ body {
     min-width: max-content;
     text-align: left;
 }
+
+#scroll-gif {
+	top: 15vh;
+	right: 15vh;
+}
+
+#scroll-gif img {
+	width: 100px;
+}
